Add code coverage metric for the SDK

--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,32 @@
 [tox]
-envlist = py38
-; envlist = py36, py38, py39
+envlist = test, lint  # By default, use current python for pytest and linting
+passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
+skipsdist=True
 isolated_build = true
 
+[build-system]
+requires = ["poetry_core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
 [testenv]
+passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
 whitelist_externals = poetry
-
-; deps =
-;     poetry
-
+commands_pre =
+    poetry install --no-root
 commands =
-    poetry install -v
-    poetry run pytest
+    poetry run coverage run -m pytest
+    poetry run coverage report --show-missing
+    poetry run codecov -e TOXENV
+
+[testenv:test]
+# Use default py interpreter
+
+[testenv:lint]
+commands =
     poetry run black --check singer_sdk/
     poetry run flake8 singer_sdk
     poetry run pydocstyle singer_sdk
     poetry run mypy singer_sdk --exclude='singer_sdk/(tests|samples)'
-
 
 [flake8]
 ; ignore = E226,E302,E41
@@ -27,3 +37,17 @@ max-complexity = 10
 
 [pydocstyle]
 ignore = D105,D203,D213
+
+[coverage:run]
+source = singer_sdk
+omit =
+    singer_sdk/tests/*
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    raise AssertionError
+    raise NotImplementedError
+    if __name__ == .__main__.:
+    class .*\bProtocol\):
