add tox shortcut for htmlcov

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,18 @@ commands =
 [testenv:test]
 # Use default py interpreter
 
+[testenv:htmlcov]
+# Launch local web browser with previously-captured pytest coverage results
+whitelist_externals =
+    echo
+    poetry
+    open
+commands_pre =
+    echo "Skipping install..."
+commands =
+    poetry run coverage html
+    open ./htmlcov/index.html
+
 [testenv:lint]
 commands =
     poetry run black singer_sdk/
