ignore _compat test cov

--- a/tox.ini
+++ b/tox.ini
@@ -55,6 +55,7 @@ ignore = D105,D203,D213
 source = singer_sdk
 omit =
     singer_sdk/tests/*
+    singer_sdk/helpers/_compat.py
 
 [coverage:report]
 exclude_lines =
