Add support for Parent-Child streams, configurable metrics logging

--- a/tox.ini
+++ b/tox.ini
@@ -21,8 +21,21 @@ commands =
 [testenv:test]
 # Use default py interpreter
 
+[testenv:htmlcov]
+# Launch local web browser with previously-captured pytest coverage results
+whitelist_externals =
+    echo
+    poetry
+    open
+commands_pre =
+    echo "Skipping install..."
+commands =
+    poetry run coverage html
+    open ./htmlcov/index.html
+
 [testenv:lint]
 commands =
+    poetry run black singer_sdk/
     poetry run black --check singer_sdk/
     poetry run flake8 singer_sdk
     poetry run pydocstyle singer_sdk
@@ -42,6 +55,7 @@ ignore = D105,D203,D213
 source = singer_sdk
 omit =
     singer_sdk/tests/*
+    singer_sdk/helpers/_compat.py
 
 [coverage:report]
 exclude_lines =
