--- a/mypy.ini
+++ b/mypy.ini
@@ -23,3 +23,6 @@ ignore_missing_imports = True
 
 [mypy-bcrypt.*]
 ignore_missing_imports = True
+
+[mypy-simpleeval.*]
+ignore_missing_imports = True
