--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,11 @@ pydocstyle = "^5.1.1"
 flake8 = "^3.9.0"
 tox = "^3.23.1"
 codecov = "^2.1.11"
+Sphinx = ">3.0,<5.0"
+# Sphinx = "^4.0.2"
+sphinx-rtd-theme = "^0.5.2"
+sphinx-copybutton = "^0.3.1"
+myst-parser = "^0.14.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
