--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,4 +7,8 @@ sphinx:
 python:
   version: 3.8
   install:
-    - requirements: docs/requirements.txt
+    # - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
