--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,16 @@ requests = "^2.25.1"
 cryptography = "^3.4.6"
 importlib-metadata = {version = "*", markers = "python_version < \"3.8\""}
 memoization = "^0.3.2"
-sphinx = {version = "^3.5.4", optional = true}  # https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-664002569
+
+# Sphinx dependencies installed as optional 'docs' extras
+# https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-664002569
+sphinx = {version = "^3.5.4", optional = true}
+sphinx-rtd-theme = {version = "^0.5.2", optional = true}
+sphinx-copybutton = {version = "^0.3.1", optional = true}
+myst-parser = {version = "^0.14.0", optional = true}
 
 [tool.poetry.extras]
-docs = ["sphinx"]
+docs = ["sphinx", "sphinx-rtd-theme", "sphinx-copybutton", "myst-parser"]
 
 [tool.poetry.dev-dependencies]
 # snowflake-connector-python = "2.0.4" # Removed: Too many version conflicts!
