--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,16 @@ cryptography = "^3.4.6"
 importlib-metadata = {version = "*", markers = "python_version < \"3.8\""}
 memoization = "^0.3.2"
 
+# Sphinx dependencies installed as optional 'docs' extras
+# https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-664002569
+sphinx = {version = "^3.5.4", optional = true}
+sphinx-rtd-theme = {version = "^0.5.2", optional = true}
+sphinx-copybutton = {version = "^0.3.1", optional = true}
+myst-parser = {version = "^0.14.0", optional = true}
+
+[tool.poetry.extras]
+docs = ["sphinx", "sphinx-rtd-theme", "sphinx-copybutton", "myst-parser"]
+
 [tool.poetry.dev-dependencies]
 # snowflake-connector-python = "2.0.4" # Removed: Too many version conflicts!
 pytest = "^6.1.2"
@@ -28,6 +38,10 @@ pydocstyle = "^5.1.1"
 flake8 = "^3.9.0"
 tox = "^3.23.1"
 codecov = "^2.1.11"
+Sphinx = "^3.5.4"
+sphinx-rtd-theme = "^0.5.2"
+sphinx-copybutton = "^0.3.1"
+myst-parser = "^0.14.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
