--- a/singer_sdk/samples/sample_tap_gitlab/gitlab-config.sample.json
+++ b/singer_sdk/samples/sample_tap_gitlab/gitlab-config.sample.json
@@ -1,7 +1,7 @@
 {
     "auth_token": "dummy_key",
     "project_ids": [
-        "meltano/singer-sdk",
+        "meltano/sdk",
         "meltano/meltano",
     ]
 }
