--- a/cookiecutter/target-template/{{cookiecutter.library_name}}/pyproject.toml
+++ b/cookiecutter/target-template/{{cookiecutter.library_name}}/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "{{cookiecutter.target_id}}"
 version = "0.0.1"
-description = "`{{cookiecutter.target_id}}` is Singer tap for {{cookiecutter.destination_name}}, built with the Singer SDK."
+description = "`{{cookiecutter.target_id}}` is a Singer target for {{cookiecutter.destination_name}}, built with the Meltano SDK for Singer Targets."
 authors = ["{{ cookiecutter.admin_name }}"]
 license = "Apache 2.0"
 
 [tool.poetry.dependencies]
-python = "<3.9,>=3.6.1"
+python = "<3.9,>=3.6.2"
 requests = "^2.25.1"
 singer-sdk = "^0.2.1"
 
