--- a/mypy.ini
+++ b/mypy.ini
@@ -23,3 +23,15 @@ ignore_missing_imports = True
 
 [mypy-bcrypt.*]
 ignore_missing_imports = True
+
+[mypy-joblib.*]
+ignore_missing_imports = True
+
+[mypy-pyarrow.*]
+ignore_missing_imports = True
+
+[mypy-pandas.*]
+ignore_missing_imports = True
+
+[mypy-simpleeval.*]
+ignore_missing_imports = True
