--- a/tox.ini
+++ b/tox.ini
@@ -39,11 +39,10 @@ commands =
     poetry run black --check singer_sdk/
     poetry run flake8 singer_sdk
     poetry run pydocstyle singer_sdk
-    poetry run mypy singer_sdk --exclude='singer_sdk/(tests|samples)'
+    poetry run mypy singer_sdk --exclude='singer_sdk/(tests)'
 
 [flake8]
-; ignore = E226,E302,E41
-ignore = W503
+ignore = W503, C901
 max-line-length = 88
 exclude = cookiecutter
 max-complexity = 10
