Ignore missing type annotations for jsonpath_ng in mypy.ini

--- a/mypy.ini
+++ b/mypy.ini
@@ -35,3 +35,6 @@ ignore_missing_imports = True
 
 [mypy-simpleeval.*]
 ignore_missing_imports = True
+
+[mypy-jsonpath_ng.*]
+ignore_missing_imports = True
