--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build_and_test:
   stage: test
   parallel:
     matrix:
-      - PYTHON_VERSION: ["3.6", "3.7", "3.8"]
+      - PYTHON_VERSION: ["3.6", "3.7", "3.8", "3.9"]
   image: python:${PYTHON_VERSION}
   script:
     - |
