--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "<3.10,>=3.6.1"
 pipelinewise-singer-python = "1.2.0"
 backoff = ">=1.8.0,<2.0"
 pendulum = "^2.1.0"
-click = "^7.1.2"
+click = "~=8.0"
 PyJWT = "1.7.1"
 requests = "^2.25.1"
 cryptography = "^3.4.6"
