--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ memoization = "^0.3.2"
 jsonpath-ng = "^1.5.3"
 joblib = "^1.0.1"
 inflection = "^0.5.1"
+sqlalchemy = {version = "^1.4", extras = ["sqlalchemy"]}
 
 # Sphinx dependencies installed as optional 'docs' extras
 # https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-664002569
