--- a/mypy.ini
+++ b/mypy.ini
@@ -38,3 +38,6 @@ ignore_missing_imports = True
 
 [mypy-jsonpath_ng.*]
 ignore_missing_imports = True
+
+[mypy-sqlalchemy.*]
+ignore_missing_imports = True
