Create poetry env before install pip and setuptools

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,8 @@ build-backend = "poetry.core.masonry.api"
 passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
 whitelist_externals = poetry
 commands_pre =
+    poetry env use python
+    poetry run pip install --upgrade pip setuptools
     poetry install --no-root
 commands =
     poetry run coverage run -m pytest
