import simpleeval as private helper module

--- a/mypy.ini
+++ b/mypy.ini
@@ -13,7 +13,11 @@ ignore_missing_imports = True
 # Missing symbols for samples is okay
 ignore_missing_imports = True
 
-[mypy-jsonschema.*]
+[mypy-simpleeval.*]
+# Imported simpleeval module as-is
+ignore_missing_imports = True
+
+[mypy-singer_sdk.helpers._simpleeval.*]
 # Frozen due to pipelinewise-singer-tools dependency
 ignore_missing_imports = True
 
@@ -31,9 +35,6 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-pandas.*]
-ignore_missing_imports = True
-
-[mypy-simpleeval.*]
 ignore_missing_imports = True
 
 [mypy-jsonpath_ng.*]
