migrate from `pydocstyle` to `flake8-docstrings`
includes necessary lint fixes and noqas

--- a/mypy.ini
+++ b/mypy.ini
@@ -17,10 +17,6 @@ ignore_missing_imports = True
 # Imported simpleeval module as-is
 ignore_missing_imports = True
 
-[mypy-singer_sdk.helpers._simpleeval.*]
-# Frozen due to pipelinewise-singer-tools dependency
-ignore_missing_imports = True
-
 [mypy-backoff.*]
 # Frozen due to pipelinewise-singer-tools dependency
 ignore_missing_imports = True
@@ -35,6 +31,9 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-pandas.*]
+ignore_missing_imports = True
+
+[mypy-jsonschema.*]
 ignore_missing_imports = True
 
 [mypy-jsonpath_ng.*]
