--- a/tox.ini
+++ b/tox.ini
@@ -38,17 +38,17 @@ commands =
     poetry run black singer_sdk/
     poetry run black --check singer_sdk/
     poetry run flake8 singer_sdk
-    poetry run pydocstyle singer_sdk
     poetry run mypy singer_sdk --exclude='singer_sdk/(tests)'
 
 [flake8]
 ignore = W503, C901
 max-line-length = 88
 exclude = cookiecutter
+per-file-ignores =
+    singer_sdk/tests/*:D100,D102,D103
+    singer_sdk/helpers/_classproperty.py:D105
+    singer_sdk/tests/core/test_plugin_base.py:D100,D202
 max-complexity = 10
-
-[pydocstyle]
-ignore = D105,D203,D213
 
 [coverage:run]
 source = singer_sdk
