--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ black = {version = "^20.8b1", allow-prereleases = true}
 mypy = "^0.812"
 cookiecutter = "^1.7.2"
 PyYAML = "^5.4.1"
-pydocstyle = "^5.1.1"
+flake8-docstrings = "^1.6.0"
 flake8 = "^3.9.0"
 pyarrow = "^3.0.0"
 pandas = ">1,<=1.2.0"
