--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ sphinx = {version = "^3.5.4", optional = true}
 sphinx-rtd-theme = {version = "^0.5.2", optional = true}
 sphinx-copybutton = {version = "^0.3.1", optional = true}
 myst-parser = {version = "^0.14.0", optional = true}
-simpleeval = "^0.9.10"
 
 [tool.poetry.extras]
 docs = ["sphinx", "sphinx-rtd-theme", "sphinx-copybutton", "myst-parser"]
@@ -38,7 +37,7 @@ black = {version = "^20.8b1", allow-prereleases = true}
 mypy = "^0.812"
 cookiecutter = "^1.7.2"
 PyYAML = "^5.4.1"
-pydocstyle = "^5.1.1"
+flake8-docstrings = "^1.6.0"
 flake8 = "^3.9.0"
 pyarrow = "^3.0.0"
 pandas = ">1,<=1.2.0"
