add darglint and flake8-annotations

--- a/tox.ini
+++ b/tox.ini
@@ -41,14 +41,15 @@ commands =
     poetry run mypy singer_sdk --exclude='singer_sdk/(tests)'
 
 [flake8]
-ignore = W503, C901
+ignore = W503, C901, ANN101
 max-line-length = 88
 exclude = cookiecutter
 per-file-ignores =
-    singer_sdk/tests/*:D100,D102,D103
+    singer_sdk/tests/*:D100,D102,D103,DAR,ANN201
     singer_sdk/helpers/_classproperty.py:D105
     singer_sdk/tests/core/test_plugin_base.py:D100,D202
 max-complexity = 10
+docstring-convention = google
 
 [coverage:run]
 source = singer_sdk
