--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ pandas = ">1,<=1.2.0"
 tox = "^3.23.1"
 codecov = "^2.1.11"
 viztracer = "^0.14.0"
+flake8-annotations = "^2.6.2"
+darglint = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
