--- a/tox.ini
+++ b/tox.ini
@@ -45,9 +45,10 @@ ignore = W503, C901, ANN101
 max-line-length = 88
 exclude = cookiecutter
 per-file-ignores =
-    singer_sdk/tests/*:D100,D102,D103,DAR,ANN201
+    singer_sdk/tests/*:D100,D102,D103,DAR,ANN
+    singer_sdk/samples/*:ANN,DAR
     singer_sdk/helpers/_classproperty.py:D105
-    singer_sdk/tests/core/test_plugin_base.py:D100,D202
+    singer_sdk/helpers/_*.py:ANN,DAR,D105
 max-complexity = 10
 docstring-convention = google
 
