Add isort to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ commands =
 [testenv:lint]
 commands =
     poetry run black --check singer_sdk/
+    poetry run isort --diff singer_sdk
     poetry run flake8 singer_sdk
     poetry run mypy singer_sdk --exclude='singer_sdk/(tests)'
 
