--- a/tox.ini
+++ b/tox.ini
@@ -45,10 +45,14 @@ ignore = W503, C901, ANN101
 max-line-length = 88
 exclude = cookiecutter
 per-file-ignores =
+    # Don't require docstrings or type annotations in tests
     singer_sdk/tests/*:D100,D102,D103,DAR,ANN
+    # Don't require docstrings conventions or type annotations in SDK samples
     singer_sdk/samples/*:ANN,DAR
-    singer_sdk/helpers/_classproperty.py:D105
+    # Don't require docstrings conventions or type annotations in private modules
     singer_sdk/helpers/_*.py:ANN,DAR,D105
+    # Don't require docstrings conventions in "meta" code
+    singer_sdk/helpers/_classproperty.py:D105
 max-complexity = 10
 docstring-convention = google
 
