add keywords, classifier and URLs

--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml
@@ -3,6 +3,10 @@ name = "{{cookiecutter.tap_id}}"
 version = "0.0.1"
 description = "`{{cookiecutter.tap_id}}` is a Singer tap for {{cookiecutter.source_name}}, built with the Meltano SDK for Singer Taps."
 authors = ["{{ cookiecutter.admin_name }}"]
+keywords = [
+    "ELT",
+    "{{cookiecutter.source_name}}",
+]
 license = "Apache 2.0"
 
 [tool.poetry.dependencies]
