--- a/cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml
+++ b/cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml
@@ -3,6 +3,10 @@ name = "{{cookiecutter.target_id}}"
 version = "0.0.1"
 description = "`{{cookiecutter.target_id}}` is a Singer target for {{cookiecutter.destination_name}}, built with the Meltano SDK for Singer Targets."
 authors = ["{{ cookiecutter.admin_name }}"]
+keywords = [
+    "ELT",
+    "{{cookiecutter.destination_name}}",
+]
 license = "Apache 2.0"
 
 [tool.poetry.dependencies]
