--- a/tox.ini
+++ b/tox.ini
@@ -35,20 +35,26 @@ commands =
 
 [testenv:lint]
 commands =
-    poetry run black singer_sdk/
     poetry run black --check singer_sdk/
+    poetry run isort --check singer_sdk
     poetry run flake8 singer_sdk
     poetry run mypy singer_sdk --exclude='singer_sdk/(tests)'
 
 [flake8]
-ignore = W503, C901
+ignore = W503, C901, ANN101
 max-line-length = 88
 exclude = cookiecutter
 per-file-ignores =
-    singer_sdk/tests/*:D100,D102,D103
+    # Don't require docstrings or type annotations in tests
+    singer_sdk/tests/*:D100,D102,D103,DAR,ANN
+    # Don't require docstrings conventions or type annotations in SDK samples
+    singer_sdk/samples/*:ANN,DAR
+    # Don't require docstrings conventions or type annotations in private modules
+    singer_sdk/helpers/_*.py:ANN,DAR,D105
+    # Don't require docstrings conventions in "meta" code
     singer_sdk/helpers/_classproperty.py:D105
-    singer_sdk/tests/core/test_plugin_base.py:D100,D202
 max-complexity = 10
+docstring-convention = google
 
 [coverage:run]
 source = singer_sdk
