--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/.gitignore
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/.gitignore
@@ -1,9 +1,9 @@
 # Secrets and internal config files
 **/.secrets/*
 
-# Ignore meltano internal cache folder
+# Ignore meltano internal cache and sqlite systemdb
 
-.meltano
+.meltano/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
