tox fail faster

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ whitelist_externals = poetry
 commands_pre =
     poetry install --no-root
 commands =
-    poetry run coverage run -m pytest
+    poetry run coverage run -m pytest -x
     poetry run coverage report --show-missing
     poetry run codecov -e TOXENV
 
