--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ whitelist_externals = poetry
 commands_pre =
     poetry install --no-root
 commands =
-    poetry run coverage run -m pytest
+    poetry run coverage run -m pytest -x
     poetry run coverage report --show-missing
     poetry run codecov -e TOXENV
 
@@ -35,7 +35,7 @@ commands =
 
 [testenv:lint]
 commands =
-    poetry run black --check singer_sdk/
+    poetry run black --check --diff singer_sdk/
     poetry run isort --check singer_sdk
     poetry run flake8 singer_sdk
     poetry run mypy singer_sdk --exclude='singer_sdk/(tests)'
