--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ sphinx = {version = "^3.5.4", optional = true}
 sphinx-rtd-theme = {version = "^0.5.2", optional = true}
 sphinx-copybutton = {version = "^0.3.1", optional = true}
 myst-parser = {version = "^0.14.0", optional = true}
+genson = "^1.2.2"
 
 [tool.poetry.extras]
 docs = ["sphinx", "sphinx-rtd-theme", "sphinx-copybutton", "myst-parser"]
