Add target mock classes and 'tap-to-target' unit tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ pyarrow = "^3.0.0"
 pandas = ">1,<=1.2.0"
 tox = "^3.23.1"
 codecov = "^2.1.11"
+freezegun = "^1.1.0"
 viztracer = "^0.14.0"
 flake8-annotations = "^2.6.2"
 darglint = "^1.8.0"
