--- a/cookiecutter/tap-template/cookiecutter.tests.yml
+++ b/cookiecutter/tap-template/cookiecutter.tests.yml
@@ -3,50 +3,52 @@ tests:
     tap_id: test-tap-rest-custom-type
     stream_type: REST
     auth_method: Custom or N/A
+    include_cicd_sample_template: "None (Skip)"
 
   - source_name: RESTAPIKeyAuthTemplateTest
     tap_id: test-tap-rest-apikeyauth-type
     stream_type: REST
     auth_method: API Key
+    include_cicd_sample_template: "None (Skip)"
 
   - source_name: RESTBearerAuthTemplateTest
     tap_id: test-tap-rest-bearerauth-type
     stream_type: REST
     auth_method: Bearer Token
+    include_cicd_sample_template: "None (Skip)"
 
   - source_name: RESTBasicAuthTemplateTest
     tap_id: test-tap-rest-basicauth-type
     stream_type: REST
     auth_method: Basic Auth
+    include_cicd_sample_template: "None (Skip)"
 
   - source_name: RESTOAuthTemplateTest
     tap_id: test-tap-rest-oath-type
     stream_type: REST
     auth_method: OAuth
+    include_cicd_sample_template: "None (Skip)"
 
   - source_name: RESTJWTTemplateTest
     tap_id: test-tap-rest-jwt-type
     stream_type: REST
     auth_method: JWT
+    include_cicd_sample_template: "None (Skip)"
 
   - source_name: GraphQLJWTTemplateTest
     tap_id: test-tap-graphql-jwt-type
     stream_type: GraphQL
     auth_method: JWT
+    include_cicd_sample_template: "None (Skip)"
 
   - source_name: OtherCustomTemplateTest
     tap_id: test-tap-other-custom-type
     stream_type: Other
     auth_method: Custom or N/A
+    include_cicd_sample_template: "None (Skip)"
 
   - source_name: CICDTemplateTest
-    tap_id: test-tap-other-custom-type
+    tap_id: test-tap-other-custom-with-github-ci
     stream_type: Other
     auth_method: Custom or N/A
     include_cicd_sample_template: Github
-
-  - source_name: CICDTemplateTest-None
-    tap_id: test-tap-other-custom-type
-    stream_type: Other
-    auth_method: Custom or N/A
-    include_cicd_sample_template: "None / Skip"
