--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/tox.ini
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/tox.ini
@@ -2,7 +2,7 @@
 
 [tox]
 envlist = py38
-; envlist = py36, py38, py39
+; envlist = py37, py38, py39
 isolated_build = true
 
 [testenv]
@@ -16,6 +16,32 @@ commands =
     poetry run pydocstyle {{cookiecutter.library_name}}
     poetry run mypy {{cookiecutter.library_name}} --exclude='{{cookiecutter.library_name}}/tests'
 
+[testenv:pytest]
+# Run the python tests.
+# To execute, run `tox ptest`
+envlist = py37, py38, py39
+commands =
+    poetry install -v
+    poetry run pytest
+
+[testenv:format]
+# Attempt to auto-resolve lint errors before they are raised.
+# To execute, run `tox format`
+commands =
+    poetry install -v
+    poetry run black singer_sdk/
+    poetry run isort singer_sdk
+
+[testenv:lint]
+# Raise an error if lint and style standards are not met.
+# To execute, run `tox lint`
+commands =
+    poetry install -v
+    poetry run black --check --diff {{cookiecutter.library_name}} /
+    poetry run isort --check {{cookiecutter.library_name}}
+    poetry run flake8 {{cookiecutter.library_name}}
+    poetry run pydocstyle {{cookiecutter.library_name}}
+    poetry run mypy {{cookiecutter.library_name}} --exclude='{{cookiecutter.library_name}}/tests'
 
 [flake8]
 ignore = W503
