Apply 1 suggestion(s) to 1 file(s)

--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/tox.ini
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/tox.ini
@@ -18,7 +18,7 @@ commands =
 
 [testenv:pytest]
 # Run the python tests.
-# To execute, run `tox ptest`
+# To execute, run `tox -e pytest`
 envlist = py37, py38, py39
 commands =
     poetry install -v
