Apply 1 suggestion(s) to 1 file(s)

--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/tox.ini
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/tox.ini
@@ -29,8 +29,8 @@ commands =
 # To execute, run `tox format`
 commands =
     poetry install -v
-    poetry run black singer_sdk/
-    poetry run isort singer_sdk
+    poetry run black {{cookiecutter.library_name}}/
+    poetry run isort {{cookiecutter.library_name}}
 
 [testenv:lint]
 # Raise an error if lint and style standards are not met.
