--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/tox.ini
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/tox.ini
@@ -1,4 +1,4 @@
-# This file can be used to customize dox tests as well as other test frameworks like flake8 and mypy
+# This file can be used to customize tox tests as well as other test frameworks like flake8 and mypy
 
 [tox]
 envlist = py38
@@ -26,7 +26,7 @@ commands =
 
 [testenv:format]
 # Attempt to auto-resolve lint errors before they are raised.
-# To execute, run `tox format`
+# To execute, run `tox -e format`
 commands =
     poetry install -v
     poetry run black {{cookiecutter.library_name}}/
@@ -34,13 +34,14 @@ commands =
 
 [testenv:lint]
 # Raise an error if lint and style standards are not met.
-# To execute, run `tox lint`
+# To execute, run `tox -e lint`
 commands =
     poetry install -v
     poetry run black --check --diff {{cookiecutter.library_name}}/
     poetry run isort --check {{cookiecutter.library_name}}
     poetry run flake8 {{cookiecutter.library_name}}
     poetry run pydocstyle {{cookiecutter.library_name}}
+    # refer to mypy.ini for specific settings
     poetry run mypy {{cookiecutter.library_name}} --exclude='{{cookiecutter.library_name}}/tests'
 
 [flake8]
