update bump version, tap cookiecutter extras logic

--- a/cookiecutter/tap-template/cookiecutter.tests.yml
+++ b/cookiecutter/tap-template/cookiecutter.tests.yml
@@ -34,6 +34,11 @@ tests:
     stream_type: GraphQL
     auth_method: JWT
 
+  - source_name: SQLTemplateTest
+    tap_id: test-tap-sql-type
+    stream_type: SQL
+    auth_method: Custom or N/A
+
   - source_name: OtherCustomTemplateTest
     tap_id: test-tap-other-custom-type
     stream_type: Other
