--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml
@@ -12,7 +12,7 @@ license = "Apache 2.0"
 [tool.poetry.dependencies]
 python = "<3.10,>=3.6.2"
 requests = "^2.25.1"
-singer-sdk = {version = "^0.3.13", extras = ["SQL"]}
+singer-sdk = {version = "^0.3.13", extras = [{{'"SQL"' if cookiecutter.stream_type == "SQL" else ''}}]}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
