fix: Move samples and tests to repo root
https://gitlab.com/meltano/sdk/-/issues/280

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,7 @@ exclude = ".*simpleeval.*"
 profile = "black"
 multi_line_output = 3 # Vertical Hanging Indent
 src_paths = "singer_sdk"
+known_first_party = ["tests", "samples"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
