--- a/tox.ini
+++ b/tox.ini
@@ -35,10 +35,10 @@ commands =
 
 [testenv:lint]
 commands =
-    poetry run black --check --diff singer_sdk/
-    poetry run isort --check singer_sdk
-    poetry run flake8 singer_sdk
-    poetry run mypy singer_sdk --exclude='singer_sdk/(tests)'
+    poetry run black --check --diff singer_sdk/ tests/ samples/
+    poetry run isort --check singer_sdk tests samples
+    poetry run flake8 singer_sdk tests samples
+    poetry run mypy singer_sdk --exclude='tests'
 
 [flake8]
 ignore = W503, C901, ANN101
@@ -46,9 +46,9 @@ max-line-length = 88
 exclude = cookiecutter
 per-file-ignores =
     # Don't require docstrings or type annotations in tests
-    singer_sdk/tests/*:D100,D102,D103,DAR,ANN
+    tests/*:D100,D102,D103,DAR,ANN
     # Don't require docstrings conventions or type annotations in SDK samples
-    singer_sdk/samples/*:ANN,DAR
+    samples/*:ANN,DAR
     # Don't require docstrings conventions or type annotations in private modules
     singer_sdk/helpers/_*.py:ANN,DAR,D105
     # Don't require docstrings conventions in "meta" code
@@ -59,7 +59,8 @@ docstring-convention = google
 [coverage:run]
 source = singer_sdk
 omit =
-    singer_sdk/tests/*
+    tests/*
+    samples/*
     singer_sdk/helpers/_compat.py
 
 [coverage:report]
