--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ memoization = "^0.3.2"
 jsonpath-ng = "^1.5.3"
 joblib = "^1.0.1"
 inflection = "^0.5.1"
-sqlalchemy = {version = "^1.4", optional = true}
+sqlalchemy = {version = "^1.4"}
 dataclasses = {version = "*", markers = "python_version < \"3.7\""}
 contextlib2 = {version = "*", markers = "python_version < \"3.7\""}
 
@@ -53,7 +53,6 @@ myst-parser = {version = "^0.14.0", optional = true}
 
 [tool.poetry.extras]
 docs = ["sphinx", "sphinx-rtd-theme", "sphinx-copybutton", "myst-parser"]
-SQL = ["sqlalchemy"]
 
 [tool.poetry.dev-dependencies]
 # snowflake-connector-python = "2.0.4" # Removed: Too many version conflicts!
