revert extras syntax

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,9 +19,9 @@ search = release = "{current_version}"
 replace = release = "{new_version}"
 
 [bumpversion:file:cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml]
-search = singer-sdk = {version = "^{current_version}"
-replace = singer-sdk = {version = "^{new_version}"
+search = singer-sdk = "^{current_version}"
+replace = singer-sdk = "^{new_version}"
 
 [bumpversion:file:cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml]
-search = singer-sdk = {version = "^{current_version}"
-replace = singer-sdk = {version = "^{new_version}"
+search = singer-sdk = "^{current_version}"
+replace = singer-sdk = "^{new_version}"
