--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ flake8-annotations = "^2.6.2"
 darglint = "^1.8.0"
 isort = "^5.9.3"
 types-requests = "^2.26.1"
+pyupgrade = "^2.29.1"
 
 [tool.black]
 exclude = ".*simpleeval.*"
