--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,8 +62,15 @@ cookiecutter = "^1.7.2"
 PyYAML = "^5.4.1"
 flake8-docstrings = "^1.6.0"
 flake8 = "^3.9.0"
-pyarrow = "^3.0.0"
-pandas = ">1,<=1.4.0"
+pyarrow = "^6.0.0"
+pandas = [
+    {version = ">1,<1.2.0", python = "<3.7.1"},
+    {version = ">=1.2.0", python = ">=3.7.1"},
+]
+numpy = [
+    {version = ">=1.19.0,<1.20.0", python = "<3.7.0"},
+    {version = ">=1.20.0", python = ">=3.7.0"},
+]
 tox = "^3.23.1"
 codecov = "^2.1.11"
 freezegun = "^1.1.0"
