--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ license = "Apache 2.0"
 "Youtube" = "https://www.youtube.com/meltano"
 
 [tool.poetry.dependencies]
-python = "<3.10,>=3.6.2"
+python = "<3.11,>=3.6.2"
 pipelinewise-singer-python = "1.2.0"
 backoff = ">=1.8.0,<2.0"
 pendulum = "^2.1.0"
@@ -62,8 +62,15 @@ cookiecutter = "^1.7.2"
 PyYAML = "^5.4.1"
 flake8-docstrings = "^1.6.0"
 flake8 = "^3.9.0"
-pyarrow = "^3.0.0"
-pandas = ">1,<=1.2.0"
+pyarrow = "^6.0.0"
+pandas = [
+    {version = ">1,<1.2.0", python = "<3.7.1"},
+    {version = ">=1.2.0", python = ">=3.7.1"},
+]
+numpy = [
+    {version = ">=1.19.0,<1.20.0", python = "<3.7.0"},
+    {version = ">=1.20.0", python = ">=3.7.0"},
+]
 tox = "^3.23.1"
 codecov = "^2.1.11"
 freezegun = "^1.1.0"
@@ -72,6 +79,7 @@ flake8-annotations = "^2.6.2"
 darglint = "^1.8.0"
 isort = "^5.9.3"
 types-requests = "^2.26.1"
+pyupgrade = "^2.29.1"
 
 [tool.black]
 exclude = ".*simpleeval.*"
