improved implementation coverage

--- a/mypy.ini
+++ b/mypy.ini
@@ -3,6 +3,7 @@ python_version = 3.8
 warn_unused_configs = True
 warn_return_any = True
 exclude = singer_sdk/tests
+plugins = sqlalchemy.ext.mypy.plugin
 
 [mypy-singer.*]
 # Library 'pipelinewise-singer-tools' does not have type hints:
