feat: support Poetry editable installs and use that in meltano.yml

--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/meltano.yml
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/meltano.yml
@@ -5,9 +5,7 @@ plugins:
   extractors:
   - name: {{cookiecutter.tap_id}}
     namespace: {{cookiecutter.library_name}}
-    # TODO: To test using Meltano, replace with absolute path
-    #       to the {{cookiecutter.tap_id}}.sh script:
-    executable: ./{{cookiecutter.tap_id}}.sh
+    pip_url: -e .
     capabilities:
     - state
     - catalog
