Add requests-mock as dev dependency
I'd like to test some changes to OAuthAuthenticator[1], the tests would
cover how the class handles responses from the OAuth API server.
requests-mock allows us to stub out API responses to create the test
conditions I'm looking for.

[1]: https://gitlab.com/meltano/sdk/-/issues/297

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,7 @@ darglint = "^1.8.0"
 isort = "^5.9.3"
 types-requests = "^2.26.1"
 pyupgrade = "^2.29.1"
+requests-mock = "^1.9.3"
 
 [tool.black]
 exclude = ".*simpleeval.*"
