--- a/cookiecutter/target-template/{{cookiecutter.target_id}}/meltano.yml
+++ b/cookiecutter/target-template/{{cookiecutter.target_id}}/meltano.yml
@@ -2,21 +2,21 @@ version: 1
 send_anonymous_usage_stats: true
 project_id: {{cookiecutter.target_id}}
 plugins:
-  extractors:
-    loaders:
-    - name: {{cookiecutter.target_id}}
-      namespace: {{cookiecutter.library_name}}
-      pip_url: -e .
-      capabilities:
-      - state
-      - catalog
-      - discover
-      config:
-        start_date: '2010-01-01T00:00:00Z'
-      settings:
-      # TODO: To configure using Meltano, declare settings and their types here:
-      - name: username
-      - name: password
-        kind: password
-      - name: start_date
-        value: '2010-01-01T00:00:00Z'
+  extractors: []
+  loaders:
+  - name: {{cookiecutter.target_id}}
+    namespace: {{cookiecutter.library_name}}
+    pip_url: -e .
+    capabilities:
+    - state
+    - catalog
+    - discover
+    config:
+      start_date: '2010-01-01T00:00:00Z'
+    settings:
+    # TODO: To configure using Meltano, declare settings and their types here:
+    - name: username
+    - name: password
+      kind: password
+    - name: start_date
+      value: '2010-01-01T00:00:00Z'
