test e2e with tap and target

--- a/mypy.ini
+++ b/mypy.ini
@@ -34,3 +34,6 @@ ignore_missing_imports = True
 
 [mypy-jsonpath_ng.*]
 ignore_missing_imports = True
+
+[mypy-samples.*]
+ignore_missing_imports = True
