--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ memoization = "^0.3.2"
 jsonpath-ng = "^1.5.3"
 joblib = "^1.0.1"
 inflection = "^0.5.1"
+sqlalchemy = "^1.4"
 dataclasses = {version = "*", markers = "python_version < \"3.7\""}
 contextlib2 = {version = "*", markers = "python_version < \"3.7\""}
 
@@ -78,9 +79,10 @@ viztracer = "^0.14.0"
 flake8-annotations = "^2.6.2"
 darglint = "^1.8.0"
 isort = "^5.9.3"
-types-requests = "^2.26.1"
 pyupgrade = "^2.29.1"
 requests-mock = "^1.9.3"
+sqlalchemy2-stubs = {version = "^0.0.2a19", allow-prereleases = true}
+types-requests = "^2.26.1"
 
 [tool.black]
 exclude = ".*simpleeval.*"
