--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -4,7 +4,7 @@
 # nested in that directory, on any level
 
 # Default
-* @DouweM @aaronsteers
+* @aaronsteers @edgarrmondragon
 
 # Docs
 /docs/ @meltano/core-team
