chore: Remove sections from CODEOWNERS

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -3,16 +3,15 @@
 # Ending a path in a `/` will specify the code owners for every file
 # nested in that directory, on any level
 
-[Default owners]
+# Default owners
 * @edgarrmondragon @aaronsteers 
 
-[Docs owners]
+# Docs owners
 /docs/ @edgarrmondragon @afolson
 /CONTRIBUTING.md @edgarrmondragon @afolson
 /README.md @edgarrmondragon @afolson
 
 # Release Ops (see `/.bumpversion.cfg` for list of bumped files)
-[Release Ops]
 /.bumpversion.cfg @meltano/core-team
 /CHANGELOG.md @meltano/core-team
 /cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml @meltano/core-team
