--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -4,7 +4,7 @@
 # nested in that directory, on any level
 
 # Default owners
-* @edgarrmondragon @aaronsteers 
+* @edgarrmondragon @cjohnhanson @aaronsteers
 
 # Docs owners
 /docs/ @edgarrmondragon @afolson
