--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,7 @@ build_and_test:
         poetry run tox -e py
       else
         echo "Run 'core' and 'cookiecutter' python test suites..."
+        poetry run pytest --doctest-modules singer_sdk
         poetry run pytest tests/core
         poetry run pytest tests/cookiecutters
       fi
