--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ jsonpath-ng = "^1.5.3"
 joblib = "^1.0.1"
 inflection = "^0.5.1"
 sqlalchemy = "^1.4"
+python-dotenv = "^0.20.0"
 
 # Sphinx dependencies installed as optional 'docs' extras
 # https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-664002569
