Add 3.11-rc to CI matrix and allow failure

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,8 +56,13 @@ build_and_test:
   stage: test
   parallel:
     matrix:
-      - PYTHON_VERSION: ["3.7", "3.8", "3.9", "3.10"]
+      - PYTHON_VERSION: ["3.7", "3.8", "3.9", "3.10", "3.11-rc"]
   image: python:${PYTHON_VERSION}
+  rules:
+    - if: $PYTHON_VERSION == "3.11-rc"
+      allow_failure: true
+    - if: $PYTHON_VERSION
+      allow_failure: false
   script:
     - |
       if [[ "$CI_PROJECT_NAMESPACE" == "meltano" ]]
