Make Docs section optional in CODEOWNERS

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -6,7 +6,7 @@
 # Default owners
 * @edgarrmondragon @cjohnhanson @aaronsteers
 
-# Docs owners
+^[Docs]
 /docs/ @edgarrmondragon @afolson
 /CONTRIBUTING.md @edgarrmondragon @afolson
 /README.md @edgarrmondragon @afolson
