Apply 1 suggestion(s) to 1 file(s)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "singer-sdk"
-version = "0.5.0+fix-sql-connector.1"
+version = "0.5.0"
 description = "A framework for building Singer taps"
 authors = ["Meltano Team and Contributors"]
 maintainers = ["Meltano Team and Contributors"]
