chore: Add workflow trigger

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,12 @@
 name: Test
 
+on:
+  pull_request: {}
+  push:
+    branches: [main]
+  workflow_dispatch:
+    inputs: {}
+
 jobs:
   tests:
     name: Test on ${{ matrix.python-version }} / ${{ matrix.os }}
