--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         architecture: x64
+        cache: 'poetry'
 
     - name: Upgrade pip
       env:
