--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,7 @@ jobs:
 
     - name: Install Dependencies
       run: |
+        poetry env use "${{ matrix.python-version }}"
         poetry install
 
     # TODO: Run complete test suite. Requires setting up some repository secrets
